--- a/src/views/post.html
+++ b/src/views/post.html
@@ -1,12 +1,11 @@
-<div class="container py-4">
+<div class="container-fluid py-4">
     <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
-            <div class="row">                
-                <div class="col-sm-9 mt-2">
-                    <h2 class="text-center mt-1 text-white display-4">Total Posts: <span id="total"></span></h2>
-                </div>
+            <div class="row">
+                <h3 class="text-center">Total Posts: <span id="total"></span></h2>
             </div>
             <ul class="list-group" id="posts"></ul>
         </div>
+    </div>
 </div>
